--- a/css/templatemo-video-catalog.css
+++ b/css/templatemo-video-catalog.css
@@ -82,14 +82,25 @@ h2, p { color: #666666; }
 }
 
 .tm-welcome-container {
-    /*position: absolute;*/
+ 
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     z-index: 999;
+    padding: 20px;
+   
 }
+
+
+
+
+
+
+
+
+
 
 
 .tm-welcome-text { font-size: 1.6rem; }
@@ -99,7 +110,10 @@ h2, p { color: #666666; }
     font-size: 1.6rem;
     border: none;
     cursor: pointer;
+  
 }
+
+
 
 .btn-primary { background-color: #3399CC; }
 .btn-primary:hover { background-color: #1674a0; }
@@ -449,13 +463,14 @@ video {
     .navbar-toggler i.tm-menu-closed-icon { display: none; }
     .navbar-toggler.collapsed i.tm-menu-opened-icon { display: none; }
     .navbar-toggler.collapsed i.tm-menu-closed-icon { display: block; }
-    .tm-welcome-container-inner { margin-top: 150px; }
+    .tm-welcome-container-inner { margin-top: 10px; }
     .tm-welcome-text { font-size: 1.4rem; }
 
     #tm-video {
-        width: 888px;
-        height: 500px;
+        width: 500px;  /* Reduced from 600px */
+        height: 300px; /* Reduced from 375px */
     }
+    
 
     .tm-logo-container {
         height: 160px;
